--- a/xs-app.json
+++ b/xs-app.json
@@ -15,12 +15,17 @@
       "destination": "ui5"
     },
     {
+      "source": "^/comsapecmreuse.comsapecmreusedocumentTable/(.*)$",
+      "target": "/$1",
+      "authenticationType": "none",
+      "destination": "comsapecmreuse_serviceinstances"
+    },    
+    {
       "source": "^/api/(.*)$",
       "target": "$1",
-      "authenticationType": "xsuaa",
-      "service": "com.sap.ecm.reuse",
-      "endpoint": "ecmservice"
-    },    
+      "authenticationType": "none",
+      "destination": "ecmservice_serviceinstances"
+    },
     {
       "source": "^(.*)$",
       "target": "$1",
